# irt-on-bench

./: .gitignore  LICENSE  README.md  core.html  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
data/: difficulty_dict.json  model_score_allcorrect.csv
irt_on_bench/: _modidx.py  cli.py  data_loader.py  fit_analysis.py  irt.py  run_irt_analysis.py  utils.py
irt_on_bench/models/: analyzer.py  irt_models.py  metadata.py
nbs/: by_topic_comp.py  difficulties.ipynb  difficulty_matrix.ipynb  index.ipynb  irt.ipynb  nbdev.yml
plots/: difficulty_analysis.py  model_comparison.py
plots/metric_comparison/: calculate_scores.py
results/: binary_matrix.csv
scripts/: chembench.py  irt.py  macbench.py  plots.py
src/irt_on_bench/: __init__.py  __main__.py  analysis.py  analyzer.py  cli.py  data.py  models.py
